# deep-learning-for-biology-pytorch

./: README.md  pyproject.toml
notebooks/: chapter_2_proteins.ipynb  chapter_3_dna.ipynb  chapter_4_graphs.ipynb  chapter_5_cancer.ipynb  chapter_6_localization.ipynb
src/dlfb_pytorch/: __init__.py  compatibility.py
src/dlfb_pytorch/cancer/: inspect.py  utils.py
src/dlfb_pytorch/cancer/dataset/: __init__.py  builder.py  preprocessors.py
src/dlfb_pytorch/cancer/model/: __init__.py  cnn.py  resnet.py
src/dlfb_pytorch/cancer/train/: __init__.py
src/dlfb_pytorch/cancer/train/handlers/: __init__.py  augmentors.py  samplers.py
src/dlfb_pytorch/dna/: dataset.py  inspect.py  model.py  train.py  utils.py
src/dlfb_pytorch/graphs/: inspect.py  model.py  train.py
src/dlfb_pytorch/graphs/dataset/: __init__.py  builder.py  pairs.py
src/dlfb_pytorch/localization/: model.py  train.py
src/dlfb_pytorch/localization/dataset/: __init__.py  builder.py  loaders.py  utils.py
src/dlfb_pytorch/localization/inspect/: metrics.py  reconstruction.py  utils.py
src/dlfb_pytorch/localization/inspect/embeddings/: clustering.py  feature_spectrum.py  utils.py
src/dlfb_pytorch/metrics/: __init__.py  f1.py  precision.py  recall.py
src/dlfb_pytorch/proteins/: dataset.py  inspect.py  model.py  train.py
src/dlfb_pytorch/utils/: __init__.py  metric_plots.py  restore.py
