[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dlfb-pytorch"
description = "PyTorch companion library for Deep Learning for Biology"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
  "torch>=2.0",
  "numpy>=2.0",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.4",
  "tqdm",
  "typer>=0.7",
  "parfive>=2.0",
  "requests",
]

[project.optional-dependencies]
proteins = [
  "transformers",
  "biopython",
  "obonet",
  "datasets",
  "py3Dmol",
  "adjusttext",
]
dna = []
graphs = [
  "torch-geometric",
  "ogb",
]
cancer = [
  "torchvision",
  "transformers",
  "kornia",
]
localization = [
  "umap-learn",
  "scipy",
]
all = [
  "dlfb-pytorch[proteins,dna,graphs,cancer,localization]",
]

[project.scripts]
dlfb-provision = "dlfb_pytorch.provision:app"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.uv.pip]
extra-index-url = [
  "https://download.pytorch.org/whl/cpu",
]
